--- a/groupMMKI/index.html
+++ b/groupMMKI/index.html
@@ -6,27 +6,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New&display=swap" rel="stylesheet">
-    <title>トップページ</title>
+    <title>台湾観光案内</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <header>
+    <header class="header">
         <div class="headerContainer">
-            <!-- ドロワーメニュー -->
-            <p class="mainLogo onlySP"><img src="images/mainlogo.svg" alt=""></p>
-            <p class="mainLogo onlyPC"><img src="images/PClogo.png" alt=""></p>
-            <!-- SNSアイコン -->
-        </div>
+            <div class="navigation">
+                <nav class="globalNav">
+                    <ul>
+                        <li><a href="#">Top</a></li>
+                        <li><a href="#">台北</a></li>
+                        <li><a href="#">台南</a></li>
+                        <li><a href="#">台中</a></li>
+                        <li><a href="#">当サイトのポリシー</a></li>
+                        <li><a href="#">お問い合わせ</a></li>
+                    </ul>            
+                </nav>
+            </div>
+            <div class="mainImg">
+                <div class="mainLogo"><img src="images/mainLogo.svg" alt="台湾"></div>
+            </div>
+            <div class="snsIcons">
+                <nav>
+                    <ul>
+                        <li class="facebook"><a href="#"><img src="images/facebook.png"></a></li>
+                        <li class="instagram"><a href="#"><img src="images/instagram.png"></a></li>
+                        <li class="twitter"><a href="#"><img src="images/twetter.png"></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div><!--headerContainer-->
     </header>
+    <div class="hero"></div>
     <main>
-        <div class="topPage">
+        <div class="topPageSec">
             <!-- 上部 -->
-            <div class="upper">           
-                <img src="images/flag.svg" alt="" class="flag">
-                <h2>Formosa</h2>
-                <h5>ファルモサ（麗しの島）</h5>
-                <img src="images/image1.png" alt="" class="topImg">
+            <div class="upper">
+                <div class="upperContainer">
+                    <div class="text">
+                        <p class="topFlag"><img srcset="images/flag.svg 400w, images/pcFlag.png 1024w" alt=""></p>
+                        <h2>Formosa</h2>
+                        <h5>ファルモサ（麗しの島）</h5>
+                    </div>
+                    <p class="topImg"><img srcset="images/image1.png 400w, images/pcImage1.png 1024w" alt=""></p>
+                </div>
             </div>
             <!-- 下部 -->
             <div class="lower">
@@ -35,8 +60,8 @@
                 発した賛嘆の言葉　です。緑にあふれた
                 台湾の美しい風景が、あなたを桃源郷の
                 世界へといざなってくれるでしょう。</p>
-    
-               <img src="images/image2.png" alt="" class="topImg">
+
+                <p class="topImg"><img srcset="images/image2.png 400w, images/pcImage2.png 1024w" alt=""></p>
             </div>
         </div>
         <div class="gallerySec">
@@ -164,7 +189,36 @@
             </div>
         </div>
     </main>
-    <fotter></fotter> <!--共有部分-->
+    <footer>
+        <div class="footerContainer">
+            <p class="flag"><img src="images/spFlag.png"></p>
+            <div class="footerNav">
+                <nav>
+                    <ul>
+                        <li><a href="">TOPへもどる</a></li>
+                        <li><a href="taipei/index.html">台北</a></li>
+                        <li><a href="taichu/index.html">台中</a></li>
+                        <li><a href="tainan/index.html">台南</a></li>
+                        <li><a href="">当サイトのポリシー</a></li>
+                        <li><a href="">お問い合わせ</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footerUnder">
+                <div class="footerLogo"></div>
+                <div class="sns">
+                    <nav class="snsNav">
+                        <ul>
+                            <li class="facebook"><a href="#"><img src="images/facebook.png"></a></li>
+                            <li class="instagram"><a href="#"><img src="images/instagram.png"></a></li>
+                            <li class="twitter"><a href="#"><img src="images/twetter.png"></a></li>
+                        </ul>  
+                    </nav>
+                </div><!--sns-->
+            </div><!--footerUnder-->
+            <p class="copyRight"><small>Copyright (C) 2023 TAIWAN.traveler.cc</small></p>
+        </div><!--footerContainer--> 
+    </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="scripts/slider.js"></script>
   </body>
