--- a/groupMMKI/index.html
+++ b/groupMMKI/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <header class="header">
+    <header>
         <div class="headerContainer">
             <div class="navigation">
                 <nav class="globalNav">
