--- a/groupMMKI/index.html
+++ b/groupMMKI/index.html
@@ -17,9 +17,9 @@
                 <nav class="globalNav">
                     <ul>
                         <li><a href="#">Top</a></li>
-                        <li><a href="#">台北</a></li>
-                        <li><a href="#">台南</a></li>
-                        <li><a href="#">台中</a></li>
+                        <li><a href="taipei/index.html">台北</a></li>
+                        <li><a href="tainan/index.html">台南</a></li>
+                        <li><a href="taichu/index.html">台中</a></li>
                         <li><a href="#">当サイトのポリシー</a></li>
                         <li><a href="#">お問い合わせ</a></li>
                     </ul>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="gallerySec">
-            <div class="h1background gallery">
+            <div class="h1Background gallery">
                 <h1>Gallery <span class="sub">ギャラリー</span></h1>
             </div>
             <div class="slideWrapper">
@@ -90,8 +90,8 @@
             </div>
             <div class="indicatorWrapper">
                 <!-- 左右のボタン -->
-                <span id="prev" class="prev onlyPC"></span>
-                <span id="next" class="next onlyPC"></span>
+                <span id="prev" class="prev onlyPC"><img src="images/pcLeftBtn.svg"></span>
+                <span id="next" class="next onlyPC"><img src="images/pcRightBtn.svg"></span>
                 <!-- インジケーター -->
                 <ul class="indicator" id="indicator">
                   <li class="list"></li>
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="travelSec">
-            <div class="h1background travel">
+            <div class="h1Background travel">
                 <h1>Travel <span class="sub">おすすめスポット</span></h1>
             </div>
 
@@ -128,7 +128,7 @@
             <p class="under"></p> <!--区切り線-->
         </div><!--travelSec-->
         <div class="eventSec">
-            <div class="h1background event">
+            <div class="h1Background event">
                 <h1>Event <span class="sub">おすすめイベント</span></h1>
             </div>
             <!-- ランタンフェス -->
@@ -167,8 +167,7 @@
             </div>
         </div>
         <div class="infoSec">
-            <!-- 枠線 -->
-            <div class="infoBoder">
+            <div class="infoBoder"><!-- 枠線 -->
                 <h3>台湾基本情報</h3>
 
                 <div class="information">
@@ -196,8 +195,8 @@
                         <li>■国慶節：10月10日 ■清明節：4月5日</li>
                     </ul>
                 </div>
-            </div>
-        </div> <!--infoSec-->
+            </div><!-- 枠線 -->
+        </div><!--infoSec-->
         <a class="pageTop" href="#"><img src="images/topicon.png"></a>
     </main>
     <footer>
@@ -207,10 +206,10 @@
                 <div class="footerNav">
                     <nav>
                         <ul>
-                            <li><a href="../index.html">TOPへもどる</a></li>
-                            <li><a href="../taipei/index.html">台北</a></li>
-                            <li><a href="../taichu/index.html">台中</a></li>
-                            <li><a href="../tainan/index.html">台南</a></li>
+                            <li><a href="#">TOPへもどる</a></li>
+                            <li><a href="taipei/index.html">台北</a></li>
+                            <li><a href="taichu/index.html">台中</a></li>
+                            <li><a href="tainan/index.html">台南</a></li>
                             <li><a href="#">当サイトのポリシー</a></li>
                             <li><a href="#">お問い合わせ</a></li>
                         </ul>
